fix: layout on mobile in profile block

--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -6,3 +6,9 @@
   justify-content: space-between;
   align-items: center;
 }
+
+@media (max-width: 767px) {
+  .profile {
+    flex-direction: column;
+  }
+}
